--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-"My GitHub Page" 
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
+<link rel="stylesheet" href="/style/main.css" type="text/css" />
+<title>New North Road</title>
+</head>
+
+<body>
+<div class="section">
+	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
+	<div class="presents">PRESENTS</div>
+</div>
+<div class="section">
+	<br>
+	<p><a href="/arcade/">THE POP-UP GAMES ARCADE</a></p>
+	<br>
+</div>
+
+<!--<div class="section smallprint">
+	<p>COPYRIGHT &copy; 2013 <a href="http://www.newnorthroad.com">NEW NORTH ROAD</a></p>
+</div>-->
+
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-707544-7']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
+</body>
+</html>
+ 
