fix poster printing style hacks

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -77,7 +77,7 @@
 	<p><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
 </div>
 
-<br><br><br><br><br><br><br><br><br><br>
+<div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
 </body>
 </html>
  
