add analytics, reorder games for printing

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -62,12 +62,12 @@
 	NOAH MORE HEROES –
 	CUM DIE WITH ME –
 	WORKER & PARASITE – 
+	SMESPORT –
+	TIDE – 
 	SPACE OCTOPUS MONO –
 	SUPER GO DOWN THE HOLE –
 	ROBOFORTRESS –
-	SMESPORT –
 	ATTACK OF THE MEEPLINGS –
-	TIDE – 
 	AND MORE…</p>
 
 	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
@@ -78,6 +78,21 @@
 </div>
 
 <div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-707544-7']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </body>
 </html>
  
