correct Bread and Butter name

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="section">
-	<p>Behind the Bread & Butter Letter,<br>
+	<p>Behind the Bread and Butter Letter,<br>
 	225 Karangahape Road</p>
 	<p>Walk down the driveway next to the shaver shop on Pitt Street</p>
 </div>
