more print and screen style changes

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="section">
-	<div class="medium">NEW NORTH ROAD</div>
+	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
 	<div class="presents">PRESENTS</div>
 </div>
 <div class="section">
@@ -31,7 +31,7 @@
 <div class="section">
 	<p>Behind the Bread and Butter Letter,<br>
 	225 Karangahape Road</p>
-	<p>Walk down the driveway next to the shaver shop on Pitt Street</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
 </div>
 
 
@@ -46,7 +46,8 @@
 </div>
 
 <div class="section">
-<p class="dense-text">
+
+<p class="dense-text screenonly">
 	<!--FEATURING THE WORK OF ANDREW YOUNG  –
 	ANTHONY LAU  –
 	ERIK HOGAN  –
@@ -70,11 +71,10 @@
 	ATTACK OF THE MEEPLINGS –
 	AND MORE…</p>
 
-	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
-</div>
+	<p class="printonly"><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
 
-<div class="section printonly smallprint">
-	<p><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+	
 </div>
 
 <div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
