--- a/arcade/index.html
+++ b/arcade/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="/style/fonts.css" type="text/css" />
 <link rel="stylesheet" href="/style/main.css" type="text/css" />
-<title>Space Octopus Mono</title>
+<title>The Pop-Up Games Arcade</title>
 </head>
 <body>
 <div class="section">
