remove link to sad-looking tumblr

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -36,12 +36,12 @@
 
 
 <div class="section screenonly smallprint">
-
-	<div class="collection">
+	<p><a href="https://www.facebook.com/events/517290041689237/">Join the event on facebook</a></p>
+<!--	<div class="collection">
 		<div class="left" style="margin-left: 150px"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
 		<div class="right" style="margin-right: 150px"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
 		<div class="right" style="width: 0px; clear:both;"></div>
-	</div>
+	</div>-->
 
 </div>
 
