remove games list, add links instead

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -34,20 +34,9 @@
 	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
 </div>
 
-
-<div class="section screenonly smallprint">
-	<p><a href="https://www.facebook.com/events/517290041689237/">Join the event on facebook</a></p>
-<!--	<div class="collection">
-		<div class="left" style="margin-left: 150px"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
-		<div class="right" style="margin-right: 150px"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
-		<div class="right" style="width: 0px; clear:both;"></div>
-	</div>-->
-
-</div>
-
 <div class="section">
 
-<p class="dense-text screenonly">
+<!--<p class="dense-text screenonly">
 	<!--FEATURING THE WORK OF ANDREW YOUNG  –
 	ANTHONY LAU  –
 	ERIK HOGAN  –
@@ -58,7 +47,7 @@
 	MICHAEL BROUGH  –
 	MICHAEL SCHAEFFERS  –
 	SERIGO CORNAGA  –
-	STEPHEN KNIGHTLY – -->
+	STEPHEN KNIGHTLY – - ->
 	THE KIWI'S TALE – 
 	NOAH MORE HEROES –
 	CUM DIE WITH ME –
@@ -70,11 +59,19 @@
 	ROBOFORTRESS –
 	ATTACK OF THE MEEPLINGS –
 	AND MORE…</p>
+-->
 
 	<p class="printonly"><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
 
+	<div class="collection screenonly">
+		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
+		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
+		<div class="right"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+
 	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
-	
+
 </div>
 
 <div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
