add photos and text to arcade page, move poster to separate page

--- a/arcade/poster/index.html
+++ b/arcade/poster/index.html
@@ -26,15 +26,6 @@
 		<div class="right">$5 entry</div>
 		<div class="right" style="width: 0px; clear:both;"></div>
 	</div>
-	<p><a href="https://www.facebook.com/events/517290041689237/">See more on facebook</a></p>
-</div>
-
-<div class="section">
-	<img src="red_and_orange.jpg">
-	<img src="purple.jpg">
-
-	<p>Come and play 10 indie games by local artists. Everyone is welcome.</p>
-
 </div>
 
 <div class="section">
@@ -45,7 +36,7 @@
 
 <div class="section">
 
-<!--<p class="dense-text">
+<!--<p class="dense-text screenonly">
 	<!--FEATURING THE WORK OF ANDREW YOUNG  –
 	ANTHONY LAU  –
 	ERIK HOGAN  –
@@ -67,11 +58,12 @@
 	SUPER GO DOWN THE HOLE –
 	ROBOFORTRESS –
 	ATTACK OF THE MEEPLINGS –
-	WORD WARS –
 	AND MORE…</p>
 -->
 
-	<div class="collection">
+	<p class="printonly"><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
+
+	<div class="collection screenonly">
 		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
 		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
 		<div class="right"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
@@ -81,6 +73,8 @@
 	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
 
 </div>
+
+<div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
 
 <script type="text/javascript">
 
