update press kit

--- a/arcade/presskit/index.html
+++ b/arcade/presskit/index.html
@@ -21,25 +21,29 @@
 
 <div class="section" style="text-align: left; font-family: 'Times New Roman'; font-size: 20px;">
 
-	<p>The Pop-Up Games Arcade
+	<p>The Pop-Up Games Arcade</p>
 
 	<p>Time: Saturday, 2 November, 11 AM to 4 PM.<br>
-	Place: The Bread and Butter Letter's basement, 225 Karangahape Road.<br>
+	Place: behind the Bread and Butter Letter, 225 Karangahape Road.<br>
 	How much: $5 cash at the door.</p>
 
 	<p>More people play games than ever before, but few Aucklanders know about the DIY game makers in their own city.</p>
 
-	<p>On November 2nd, the Pop-Up Games Arcade will appear with 10 indie games made by local creatives.</p>
+	<p>A small group aims to change this, by bringing local games to the local community in a fun and social way.</p>
 
-	<p>The arcade's purpose is to grow a community around local games, the same way that people get together to support local bands, painters, poets and zinesters.</p>
+	<p>The Pop-Up Games Arcade is an event where everyone – including people who might not consider themselves to be "gamers" – can enjoy unique, New Zealand made games together.</p>
 
-	<p>The 10 games were chosen from over 100 made in Auckland over the last few years. Some are new, unreleased games; others are older games that work great in a social setting. Most of them are very strange, but should be easy to play even if you're new to indie games.</p>
+	<p>The goal is to build a friendly community around local games, the same way that people get together to support local bands, painters, poets and zinesters.</p>
 
-	<p>Built from cardboard, paint and old computers, the arcade is colourful and messy</li> more like an art class than a computer lab. </p>
+	<p>The arcade features ten games made by local creatives. These games were chosen from hundreds made in Auckland because they show a wide range of styles, while still being easy to learn and fun in an arcade setting.</p>
+
+	<p>The arcade itself is made from old computers, up-cycled into art with paint, chalk, and googly eyes. It's messy, colourful and strange – just like the games.</p>
 
 	<p>All ages are welcome. A few of the games have mature themes.</p>
 
-	<p>more info at <a href="http://newnorthroad.com/arcade/">http://newnorthroad.com/arcade/</a></p>
+	<p>The arcade happens on Saturday, 2nd of November, and costs $5 cash at the door.</p>
+
+	<p>More information: <a href="http://newnorthroad.com/arcade/">http://newnorthroad.com/arcade/</a></p>
 
 </div>
 
@@ -48,30 +52,32 @@
 <p>The games list:</p>
 
 <ul style="text-align: left; font-size: 26px;">
-	<li>THE KIWI'S TALE – Erik Hogan &amp; Stephen Knightly</li> 
+	<li>THE KIWI'S TALE – Erik Hogan, Stephen Knightly</li> 
 	<li>NOAH MORE HEROES – Andrew Young, Anthony Lau, Erik Hogan, Michael Schaeffers, Sergio Cornaga</li>
 	<li>CUM DIE WITH ME – Lianne Booton</li>
-	<li>WORKER &amp; PARASITE – Sergio Cornaga</li> 
-	<li>SMESPORT – Michael Brough</li>
-	<li>SPACE OCTOPUS MONO – Matthew Gatland</li>
 	<li>ATTACK OF THE MEEPLINGS – Joshua Smyth</li>
-	<li>WORD WARS – Jenna Gavin &amp; Tom Tyer-Drake</li>
+	<li>WORKER &amp; PARASITE – Sergio Cornaga</li> 
+	<li>SPACE OCTOPUS MONO – Matthew Gatland</li>
+	<li>SMESPORT – Michael Brough</li>
+	<li>WORD WARS – Jenna Gavin, Tom Tyer-Drake</li>
 	<li>And more…</li>
 </ul>
 
-<p class="dense-text">
-	<!--FEATURING THE WORK OF ANDREW YOUNG </li>
-	ANTHONY LAU </li>
-	ERIK HOGAN </li>
-	JENNA GAVIN</li>
-	JOSHUA SMYTH </li>
-	LIANNE BOOTON </li>
-	MATTHEW GATLAND </li>
-	MICHAEL BROUGH </li>
-	MICHAEL SCHAEFFERS </li>
-	SERIGO CORNAGA </li>
-	STEPHEN KNIGHTLY</li> -->
+<img title="The Kiwi's Tale" src="../screenshots/the_kiwi's_tale_2.png">
+<img title="Noah More Heroes" src="../screenshots/noah_more_heroes_2.png">
+<img title="Cum Die With Me" src="../screenshots/cum_die_with_me_2.png">
+<img title="Attack of the Meeplings" src="../screenshots/attack_of_the_meeplings.gif">
+<img title="Worker &amp; Parasite" src="../screenshots/worker_and_parasite.png">
+<img title="Space Octopus Mono" src="../screenshots/space_octopus_mono.png">
+<img title="SMESPORT" src="../screenshots/smesport.jpg">
+<img title="Word Wars" src="../screenshots/word_wars.png">
 
+<p style="text-align: left;">High quality screenshots of the games are <a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPMUMwMENXa2pfV3M&usp=sharing">here</a>.</p>
+
+</div>
+<div class="section">
+
+<p class="dense-text">
 	<div class="collection">
 		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
 		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
