update arcade images, add game screenshots

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -30,10 +30,23 @@
 </div>
 
 <div class="section">
-	<img src="red_and_orange.jpg">
-	<img src="purple.jpg">
+	<img src="purple_and_monster.jpg">
 
 	<p>Come and play 10 indie games by local artists. Everyone is welcome.</p>
+
+</div>
+<div class="section">
+
+	<p class="dense-text">
+		THE KIWI'S TALE – 
+		NOAH MORE HEROES –
+		CUM DIE WITH ME –
+		WORKER & PARASITE – 
+		SMESPORT –
+		SPACE OCTOPUS MONO –
+		ATTACK OF THE MEEPLINGS –
+		WORD WARS –
+		AND MORE…</p>
 
 </div>
 
@@ -45,32 +58,6 @@
 
 <div class="section">
 
-<!--<p class="dense-text">
-	<!--FEATURING THE WORK OF ANDREW YOUNG  –
-	ANTHONY LAU  –
-	ERIK HOGAN  –
-	JENNA GAVIN –
-	JOSHUA SMYTH  –
-	LIANNE BOOTON  –
-	MATTHEW GATLAND  –
-	MICHAEL BROUGH  –
-	MICHAEL SCHAEFFERS  –
-	SERIGO CORNAGA  –
-	STEPHEN KNIGHTLY – - ->
-	THE KIWI'S TALE – 
-	NOAH MORE HEROES –
-	CUM DIE WITH ME –
-	WORKER & PARASITE – 
-	SMESPORT –
-	TIDE – 
-	SPACE OCTOPUS MONO –
-	SUPER GO DOWN THE HOLE –
-	ROBOFORTRESS –
-	ATTACK OF THE MEEPLINGS –
-	WORD WARS –
-	AND MORE…</p>
--->
-
 	<div class="collection">
 		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
 		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
@@ -79,7 +66,15 @@
 	</div>
 
 	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
 
+<div class="section">
+	<img class="smallimg" title="Cum Die With Me" src="screenshots/cum_die_with_me_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="screenshots/worker_and_parasite_500x.jpg">
+	<img class="smallimg" title="SMESPORT" src="screenshots/smesport_500x.jpg">
+	<img class="smallimg" src="sign_orange.jpg">
+
+	<p class="smallprint"><a href="presskit/">Press kit</a></p>
 </div>
 
 <script type="text/javascript">
