--- a/arcade/presskit/index.html
+++ b/arcade/presskit/index.html
@@ -16,6 +16,9 @@
 	<h2>Press Kit</h2>
 </div>
 <div class="section">
+
+<img src="../sign_orange.jpg">
+
 <p><a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPX0JFMmhmS2VyWFk&usp=sharing">Browse all of our photos</a></p>
 </div>
 
