add missing name to credits

--- a/arcade/presskit/index.html
+++ b/arcade/presskit/index.html
@@ -59,7 +59,7 @@
 	<li>NOAH MORE HEROES – Andrew Young, Anthony Lau, Erik Hogan, Michael Schaeffers, Sergio Cornaga</li>
 	<li>CUM DIE WITH ME – Lianne Booton</li>
 	<li>ATTACK OF THE MEEPLINGS – Joshua Smyth</li>
-	<li>WORKER &amp; PARASITE – Sergio Cornaga</li> 
+	<li>WORKER &amp; PARASITE – Sergio Cornaga, Mark Gobbin</li> 
 	<li>SPACE OCTOPUS MONO – Matthew Gatland</li>
 	<li>SMESPORT – Michael Brough</li>
 	<li>WORD WARS – Jenna Gavin, Tom Tyer-Drake</li>
