new site theme, edited press release

--- a/arcade/presskit/index.html
+++ b/arcade/presskit/index.html
@@ -2,18 +2,17 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
-<title>The Pop-Up Games Arcade</title>
+<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<title>The Pop-Up Games Arcade Press Kit</title>
 </head>
 <body>
 <div class="section">
-	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
+	<div class="logo"><a href="/">NEW NORTH ROAD</a></div>
 	<div class="presents">PRESENTS</div>
 </div>
 <div class="section">
-	<h2>THE POP-UP GAMES ARCADE</h2>
-	<h2>Press Kit</h2>
+	<h2>THE POP-UP GAMES ARCADE<br>Press Kit</h2>
 </div>
 <div class="section">
 
@@ -22,7 +21,7 @@
 <p><a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPX0JFMmhmS2VyWFk&usp=sharing">Browse all of our photos</a></p>
 </div>
 
-<div class="section" style="text-align: left; font-family: 'Times New Roman'; font-size: 20px;">
+<div class="section pressrelease">
 
 	<p>The Pop-Up Games Arcade</p>
 
@@ -34,11 +33,9 @@
 
 	<p>A small group aims to change this, by bringing local games to the local community in a fun and social way.</p>
 
-	<p>The Pop-Up Games Arcade is an event where everyone – including people who might not consider themselves to be "gamers" – can enjoy unique, New Zealand made games together.</p>
+	<p>The Pop-Up Arcade is an all-ages event for anyone who wants to try something a bit different. The goal is to build a friendly community around local games, just like groups that support local bands, painters, poets and zinesters.</p>
 
-	<p>The goal is to build a friendly community around local games, the same way that people get together to support local bands, painters, poets and zinesters.</p>
-
-	<p>The arcade features ten games made by local creatives. These games were chosen from hundreds made in Auckland because they show a wide range of styles, while still being easy to learn and fun in an arcade setting.</p>
+	<p>The games feature kiwis, cats and mice, alien invasions and an office party at the end of the world. They represent the work of both well-established game-makers as well as some of Auckland's up-and-coming creators.</p>
 
 	<p>The arcade itself is made from old computers, up-cycled into art with paint, chalk, and googly eyes. It's messy, colourful and strange – just like the games.</p>
 
@@ -54,7 +51,7 @@
 
 <p>The games list:</p>
 
-<ul style="text-align: left; font-size: 26px;">
+<ul>
 	<li>THE KIWI'S TALE – Erik Hogan, Stephen Knightly</li> 
 	<li>NOAH MORE HEROES – Andrew Young, Anthony Lau, Erik Hogan, Michael Schaeffers, Sergio Cornaga</li>
 	<li>CUM DIE WITH ME – Lianne Booton</li>
@@ -75,12 +72,12 @@
 <img title="SMESPORT" src="../screenshots/smesport.jpg">
 <img title="Word Wars" src="../screenshots/word_wars.png">
 
-<p style="text-align: left;">High quality screenshots of the games are <a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPMUMwMENXa2pfV3M&usp=sharing">here</a>.</p>
+<p>High quality screenshots of the games are <a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPMUMwMENXa2pfV3M&usp=sharing">here</a>.</p>
 
 </div>
 <div class="section">
 
-<p class="dense-text">
+<p>
 	<div class="collection">
 		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
 		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
