--- a/space-octopus-mono/index.html
+++ b/space-octopus-mono/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
+<link rel="stylesheet" href="/style/som.css" type="text/css" />
+<link rel="stylesheet" href="/style/som-fonts.css" type="text/css" />
 <title>Space Octopus Mono</title>
 
 <!--  track outbound links -->
@@ -49,11 +49,11 @@ POWERFUL UPGRADES as they progress through SPECIAL STAGES and defeat increasingl
 We humbly invite all of the gentry and general public who possess a WINDOWS PHONE 7 mobile device to
  receive and enjoy a <a href="http://social.zune.net/redirect?type=phoneApp&id=fb2d7fad-c8d5-df11-a844-00237de2db9e"  onClick="recordOutboundLink(this, 'Outbound Links', 'newnorthroad.com/space-octopus-mono/zune-marketplace');return false;">FREE TRIAL</a> of no less than 30 LEVELS OF THE FULL GAME.</p>
 
-<img style="float:left;" src="images/space-octopus-mono-screen-01-themed.png"
+<img style="float:left;" src="images/space-octopus-mono-screen-01.png"
 	alt="A screenshot from Space Octopus Mono" width="240" height="400">
-<img style="float:left;"  src="images/space-octopus-mono-screen-05-themed.png"
+<img style="float:left;"  src="images/space-octopus-mono-screen-05.png"
 	alt="A screenshot from Space Octopus Mono" width="240" height="400">
-<img style="float:left;"  src="images/space-octopus-mono-screen-02-themed.png"
+<img style="float:left;"  src="images/space-octopus-mono-screen-02.png"
 	alt="A screenshot from Space Octopus Mono" width="240" height="400">
 	<div style="clear:both;"></div>
 	<p>COPYRIGHT &copy; 2010 <a href="http://www.newnorthroad.com">NEW NORTH ROAD</a></p>
