--- a/arcade/index.html
+++ b/arcade/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
 <title>The Pop-Up Games Arcade</title>
 </head>
 <body>
 <div class="section">
-	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
+	<div class="logo"><a href="/">NEW NORTH ROAD</a></div>
 	<div class="presents">PRESENTS</div>
 </div>
 <div class="section">
-	<h1>THE<br>POP-UP<br>GAMES<br>ARCADE</h1>
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
 </div>
 <div class="section">
 <p>Strange videogames by local creatives</p>
