--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
 <title>New North Road</title>
 </head>
 
 <body>
 <div class="section">
-	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
+	<div class="logo"><a href="/">NEW NORTH ROAD</a></div>
 	<div class="presents">PRESENTS</div>
 </div>
 <div class="section">
