--- a/space-octopus-mono/contact/index.html
+++ b/space-octopus-mono/contact/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
+<link rel="stylesheet" href="/style/som-fonts.css" type="text/css" />
+<link rel="stylesheet" href="/style/som.css" type="text/css" />
 <title>Space Octopus Mono - Support and Contact</title>
 </head>
 <body>
