--- a/arcade/poster/index.html
+++ b/arcade/poster/index.html
@@ -2,17 +2,15 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="/style/fonts.css" type="text/css" />
-<link rel="stylesheet" href="/style/main.css" type="text/css" />
-<title>The Pop-Up Games Arcade</title>
+<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<title>The Pop-Up Games Arcade (flyers and posters)</title>
 </head>
-<body>
+<body class="poster">
+<div class="allpages">
+<div class="page">
 <div class="section">
-	<div class="medium"><a href="/">NEW NORTH ROAD</a></div>
-	<div class="presents">PRESENTS</div>
-</div>
-<div class="section">
-	<h1>THE<br>POP-UP<br>GAMES<br>ARCADE</h1>
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
 </div>
 <div class="section">
 <p>Strange videogames by local creatives</p>
@@ -27,68 +25,268 @@
 		<div class="right" style="width: 0px; clear:both;"></div>
 	</div>
 </div>
-
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
 <div class="section">
 	<p>Behind the Bread and Butter Letter,<br>
 	225 Karangahape Road</p>
 	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
 </div>
 
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+<!-- now the above is copy-pasted 4 times -->
+
+<div class="page">
 <div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
 
-<!--<p class="dense-text screenonly">
-	<!--FEATURING THE WORK OF ANDREW YOUNG  –
-	ANTHONY LAU  –
-	ERIK HOGAN  –
-	JENNA GAVIN –
-	JOSHUA SMYTH  –
-	LIANNE BOOTON  –
-	MATTHEW GATLAND  –
-	MICHAEL BROUGH  –
-	MICHAEL SCHAEFFERS  –
-	SERIGO CORNAGA  –
-	STEPHEN KNIGHTLY – - ->
-	THE KIWI'S TALE – 
-	NOAH MORE HEROES –
-	CUM DIE WITH ME –
-	WORKER & PARASITE – 
-	SMESPORT –
-	TIDE – 
-	SPACE OCTOPUS MONO –
-	SUPER GO DOWN THE HOLE –
-	ROBOFORTRESS –
-	ATTACK OF THE MEEPLINGS –
-	AND MORE…</p>
--->
-
-	<p class="printonly"><a href="http://www.newnorthroad.com/arcade">www.newnorthroad.com/arcade</a></p>
-
-	<div class="collection screenonly">
-		<div class="left"><a href="https://www.facebook.com/events/517290041689237/">facebook</a></div>
-		<div><a href="http://www.twitter.com/popup_arcade">twitter</a></div>
-		<div class="right"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
 		<div class="right" style="width: 0px; clear:both;"></div>
 	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
 
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
 	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+<div class="page">
+<div class="section">
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+</div>
+<div class="section">
+<p>Strange videogames by local creatives</p>
+</div>
+
+<div class="section">
+	<div class="collection">
+		<div class="left">
+		Saturday 2 November</div>
+		<div>11 AM to 4 PM</div>
+		<div class="right">$5 entry</div>
+		<div class="right" style="width: 0px; clear:both;"></div>
+	</div>
+</div>
+<div class="section images">
+	<img class="smallimg" title="Smesport" src="/arcade/screenshots/smesport_500x.jpg">
+	<img class="smallimg" title="Worker &amp; Parasite" src="/arcade/screenshots/worker_and_parasite_500x.jpg">
+</div>
+<div class="section">
+	<p>Behind the Bread and Butter Letter,<br>
+	225 Karangahape Road</p>
+	<p class="smallprint">(Walk down the driveway next to the shaver shop on Pitt Street)</p>
+</div>
+
+<div class="section endofpage">
+	<p><a href="http://www.newnorthroad.com/arcade/">www.newnorthroad.com/arcade</a></p>
+	<p class="smallprint">All ages are welcome. Some games have mature themes.</p>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
 
 </div>
 
-<div class="printonly"><br><br><br><br><br><br><br><br><br><br></div>
+<br style="clear: both;">
+<br>
+<br>
+<p>hello!</p>
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-707544-7']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 </body>
 </html>
