added games list with links

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -37,7 +37,7 @@
 </div>
 <div class="section">
 
-	<p class="dense-text">
+	<a href="./games/" style="text-decoration: none" title="See the games list"><p class="dense-text">
 		THE KIWI'S TALE – 
 		NOAH MORE HEROES –
 		CUM DIE WITH ME –
@@ -46,7 +46,7 @@
 		SPACE OCTOPUS MONO –
 		ATTACK OF THE MEEPLINGS –
 		WORD WARS –
-		AND MORE…</p>
+		AND MORE…</p></a>
 
 </div>
 
