games page update to show games are not affiliated with us

--- a/arcade/games/index.html
+++ b/arcade/games/index.html
@@ -46,10 +46,13 @@
 
 <li><a href="http://www.smestorp.com/">Smesport</a> &#8211; Michael Brough. This game is not released yet.</li>
 
-<li><a href="https://www.facebook.com/pages/Rabble-Room/149553558551802">Word Wars</a> &#8211; Jenna Gavin and Tom Tyer-Drake. Look out for this game cabinet at other events around Auckland!</li>
+<li><a href="https://www.facebook.com/pages/Rabble-Room/149553558551802">Word Wars</a> &#8211; Jenna Gavin and Tom Tyer-Drake. Look out for this game cabinet at other events around Auckland.</li>
 </ul>
+</div>
+<div class="section">
+	<p>Thanks to all of the game creators for letting us use their work!<br>Follow the links above to check out their other projects.</p>
 
-
+	<p class="smallprint">If you want to know about the next arcade, please follow us on <a href="https://www.facebook.com/popuparcade">facebook</a> or <a href="https://twitter.com/popup_arcade">twitter</a>.</p>
 </div>
 
 <script type="text/javascript">
