--- a/index.html
+++ b/index.html
@@ -4,40 +4,96 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/style/arcade.css" type="text/css" />
-<title>New North Road</title>
+<title>The Pop-Up Games Arcade</title>
 </head>
-
 <body>
-<div class="section">
-	<div class="logo"><a href="/">NEW NORTH ROAD</a></div>
-	<div class="presents">PRESENTS</div>
+  <div class="section">
+  	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+  </div>
+  <div class="section">
+    <p>Strange videogames by local creatives</p>
+    <img class="framed" src="img/popup_colors.jpg">
+  </div>
+
+  <div class="section">
+    <p>
+      <a class="navlist" href="#nextevent">Next Event</a>
+      <a class="navlist" href="#aboutus">About Us</a>
+      <a class="navlist" href="#stayintouch">Stay in touch</a>
+      <a class="navlist" href="#pastevents">Past Events</a>
+      </p>
+  </div>
+
+  <div id="nextevent" class="section">
+    <h2>Next Event</h2>
+    <p>We're still working on it… join our email list to keep up-to-date!</p>
+    <img class="framed" src="img/popup_redecorating.jpg">
+    <img class="framed" src="">
+  </div>
+  <div id="aboutus" class="section">
+    <h2>About Us</h2>
+      <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
+      <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
+      <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+    <p>
+      We run a DIY games arcade, showing home-made games from around New Zealand.
+    </p>
+    <p>
+      Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
+    </p>
+  </div>
+  <div id="stayintouch" class="section">
+    <h2>Stay in Touch</h2>
+
+<!-- Begin MailChimp Signup Form -->
+<div class="mc_embed_signup">
+<form action="http://popuparcade.us3.list-manage.com/subscribe/post?u=da3411c1060122b316eab2634&amp;id=2f217db60f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  
+<div>
+  <p>Sign up to hear about our next arcade!</p>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"><br>
+  <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Your name"><br>
+    <input type="checkbox" value="1" name="group[5853][1]" id="checkbox">
+    <label for="checkbox">Also tell me about DIY game-making workshops</label>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_da3411c1060122b316eab2634_2f217db60f" value=""></div>
+  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </div>
-<div class="section">
-	<br>
-	<p><a href="/arcade/">THE POP-UP GAMES ARCADE</a></p>
-	<br>
+</form>
 </div>
 
-<!--<div class="section smallprint">
-	<p>COPYRIGHT &copy; 2013 <a href="http://www.newnorthroad.com">NEW NORTH ROAD</a></p>
-</div>-->
+<!--End mc_embed_signup-->
 
+    <p>
+      <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
+      <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
+      <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
+    </p>
+  </div>
 
-<script type="text/javascript">
+  <div id="pastevents" class="section">
+    <h2>Past Events</h2>
+    <ul>
+      <li><a href="/events/2013-12-05/">First Thursdays Fiesta</a></li>
+      <li>Videogames appear at the Auckland Art Gallery</li>
+      <li><a href="/events/2013-11-02/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
+    </ul>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-707544-7']);
-  _gaq.push(['_trackPageview']);
+    <p><a href="/games/">See all the games we've ever shown</a></p>
+  </div>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-707544-9', 'popuparcade.co.nz');
+  ga('send', 'pageview');
 </script>
-
-
 </body>
 </html>
  
