--- a/games/index.html
+++ b/games/index.html
@@ -46,7 +46,7 @@
 		<p><a href='http://sergiocornaga.tumblr.com/post/7416495044/you-have-to-go-down-the-hole-2009'>Super Go Down the Hole</a> &#8211; Sergio Cornaga (Windows)</p>
 
 		<a href='http://sergiocornaga.tumblr.com/post/13056331523/worker-parasite-the-game-2011'><img class="framed"  title="Worker &amp; Parasite" src="/screenshots/worker_and_parasite.png"></a>
-		<p><a href='http://sergiocornaga.tumblr.com/post/13056331523/worker-parasite-the-game-2011'>Worker and Parasite</a> &#8211; Sergio Cornaga (Windows)</p>
+		<p><a href='http://sergiocornaga.tumblr.com/post/13056331523/worker-parasite-the-game-2011'>Worker and Parasite</a> &#8211; Sergio Cornaga and Mark Gobbin (Windows)</p>
 
 		<a href='http://earok.net/game/noah-more-heroes'><img class="framed"  title="Noah More Heroes" src="/screenshots/noah_more_heroes_2.png"></a>
 		<p><a href='http://earok.net/game/noah-more-heroes'>Noah more Heroes</a> &#8211; Andrew Young, Anthony Lau, Erik Hogan, Michael Schaeffers, Sergio Cornaga (Windows)</p>
