--- a/index.html
+++ b/index.html
@@ -3,7 +3,44 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<style>
+body {
+  background-color: #f4f4f4 ;
+  background-image: none ;
+  color: black ;
+  }
+body, h1, h2 { font-family: 'Special Elite', cursive ;}
+a {
+  color: grey ;
+  text-decoration: none ;
+}
+a:before {
+    content: "[";
+    color: grey;
+}
+a:after {
+    content: "]";
+    color: grey;
+}
+.portrait {
+  border: 3px solid grey;
+}
+a.navlist:before {
+    content: "";
+}
+a.navlist:after {
+    content: "";
+}
+form {
+  background: #447;
+  border: 2px solid black;
+}
+.framed {
+  border: 1px solid grey;
+}
+</style>
 <title>The Pop-Up Games Arcade</title>
 </head>
 <body>
@@ -12,24 +49,26 @@
   </div>
   <div class="section">
     <p>Strange videogames by local creatives</p>
-    <img class="framed" src="img/popup_colors.jpg">
   </div>
+
+  <div class="section spy" id="nextevent">
+    <h1>Secret HQ</h1>
+    <p>Thursday, 1st of May, 2014</p>
+    <p>6 PM – 9 PM</p>
+    <p>Free</p>
+    <p>Te Karanga Gallery,<br>208 Karangahape Road,<br>Auckland</p>
+    <img class="framed" src="callforgames2/avengers.jpg">
+  </div>
+
 
   <div class="section">
     <p>
-      <a class="navlist" href="#nextevent">Next Event</a>
       <a class="navlist" href="#aboutus">About Us</a>
       <a class="navlist" href="#stayintouch">Stay in touch</a>
       <a class="navlist" href="#pastevents">Past Events</a>
       </p>
   </div>
 
-  <div id="nextevent" class="section">
-    <h2>Next Event</h2>
-    <p>We're still working on it… join our email list to keep up-to-date!</p>
-    <img class="framed" src="img/popup_redecorating.jpg">
-    <img class="framed" src="">
-  </div>
   <div id="aboutus" class="section">
     <h2>About Us</h2>
       <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
@@ -38,6 +77,7 @@
     <p>
       We run a DIY games arcade, showing home-made games from around New Zealand.
     </p>
+    <img class="framed" src="img/popup_colors.jpg">
     <p>
       Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
     </p>
