Update homepage, add New Lynn theme

--- a/callforgames2/index.html
+++ b/callforgames2/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<link rel="stylesheet" href="/style/oldtimey.css" type="text/css" />
 <style>
 h1, .logo, body { font-family: 'Special Elite', cursive;}
 body {
