--- a/making/index.html
+++ b/making/index.html
@@ -7,19 +7,23 @@
 <title>The Pop-Up Guide to Making Games</title>
 </head>
 <body>
-<div class="section">
-	<p class="smallprint"><a href="/">Click here to return to our home page.</a></p>
+<div class="back4">
+	<div class="section">
+		<p class="smallprint"><a href="/">Click here to return to our home page.</a></p>
+	</div>
+	<div class="section">
+		<h1>The Pop-Up Guide to Making Games</h1>
+	</div>
+
+	<div class="section">
+
+		<p>There are lots of great tools to help you get started making games.</p>
+
+		<p>Here are some of our favourites:</p>
+	</div>
 </div>
-<div class="section">
-	<h1>The Pop-Up Guide to Making Games</h1>
-</div>
-
-<div class="section">
-
-	<p>There are lots of great tools to help you get started making games.</p>
-
-	<p>Here are some of our favourites:</p>
-
+<div class="back5">
+	<div class="section">
 	<ul>
 		<li><a href="http://scratch.mit.edu/">Scratch</a> – make simple stories, games and animations.</li>
 		<li><a href="">Twine</a> – make interactive stories. This is a great place to start if you like writing.</li>
@@ -32,8 +36,7 @@
 	<img class="framed" src="/img/popup_hanging.jpg">
 
 	<p>The best way to improve your games is to let people play them. See what they enjoy, and where they get stuck or become frustrated. This will help you make your game more accessible and fun.</p>
-
-	<p></p>
+	</div>
 </div>
 
 <script>
