--- a/old/presskit/index.html
+++ b/old/presskit/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<link rel="stylesheet" href="/style/oldtimey.css" type="text/css" />
 <title>The Pop-Up Games Arcade Press Kit</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 </div>
 <div class="section">
 
-<img src="../sign_orange.jpg">
+<img src="/img/sign_orange.jpg" class="framed">
 
 <p><a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPX0JFMmhmS2VyWFk&usp=sharing">Browse all of our photos</a></p>
 </div>
@@ -63,14 +63,14 @@
 	<li>And more…</li>
 </ul>
 
-<img title="The Kiwi's Tale" src="../screenshots/the_kiwi's_tale_2.png">
-<img title="Noah More Heroes" src="../screenshots/noah_more_heroes_2.png">
-<img title="Cum Die With Me" src="../screenshots/cum_die_with_me_2.png">
-<img title="Attack of the Meeplings" src="../screenshots/attack_of_the_meeplings.gif">
-<img title="Worker &amp; Parasite" src="../screenshots/worker_and_parasite.png">
-<img title="Space Octopus Mono" src="../screenshots/space_octopus_mono.png">
-<img title="SMESPORT" src="../screenshots/smesport.jpg">
-<img title="Word Wars" src="../screenshots/word_wars.png">
+<img title="The Kiwi's Tale" src="/screenshots/the_kiwi's_tale_2.png">
+<img title="Noah More Heroes" src="/screenshots/noah_more_heroes_2.png">
+<img title="Cum Die With Me" src="/screenshots/cum_die_with_me_2.png">
+<img title="Attack of the Meeplings" src="/screenshots/attack_of_the_meeplings.gif">
+<img title="Worker &amp; Parasite" src="/screenshots/worker_and_parasite.png">
+<img title="Space Octopus Mono" src="/screenshots/space_octopus_mono.png">
+<img title="SMESPORT" src="/screenshots/smesport.jpg">
+<img title="Word Wars" src="/screenshots/word_wars.png">
 
 <p>High quality screenshots of the games are <a href="https://drive.google.com/folderview?id=0B41zmm_jyDAPMUMwMENXa2pfV3M&usp=sharing">here</a>.</p>
 
@@ -84,7 +84,7 @@
 		<div class="right"><a href="http://popuparcade.tumblr.com">tumblr</a></div>
 		<div class="right" style="width: 0px; clear:both;"></div>
 	</div>
-	<p><a href="../">Main page</a></p>
+	<p><a href="/">Main page</a></p>
 </div>
 
 <script>
