--- a/businesscard/index.html
+++ b/businesscard/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<link rel="stylesheet" href="/style/oldtimey.css" type="text/css" />
 <link rel="stylesheet" href="/businesscard/font-awesome-4.0.3/css/font-awesome.css" type="text/css" />
 <style>
 .businesscard {
