--- a/games/index.html
+++ b/games/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/style/arcade.css" type="text/css" />
+<link rel="stylesheet" href="/style/oldtimey.css" type="text/css" />
 <title>The Pop-Up Games Arcade - games list</title>
 </head>
 <body>
