--- a/index.html
+++ b/index.html
@@ -5,62 +5,34 @@
 <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/style/arcade.css" type="text/css" />
-<style>
-body {
-  background-color: #f4f4f4 ;
-  background-image: none ;
-  color: black ;
-  }
-body, h1, h2 { font-family: 'Special Elite', cursive ;}
-a {
-  color: grey ;
-  text-decoration: none ;
-}
-a:before {
-    content: "[";
-    color: grey;
-}
-a:after {
-    content: "]";
-    color: grey;
-}
-.portrait {
-  border: 3px solid grey;
-}
-a.navlist:before {
-    content: "";
-}
-a.navlist:after {
-    content: "";
-}
-form {
-  background: #447;
-  border: 2px solid black;
-}
-.framed {
-  border: 1px solid grey;
-}
-</style>
 <title>The Pop-Up Games Arcade</title>
 </head>
 <body>
+<div class="back1">
   <div class="section">
   	<h1>THE POP-UP<br>GAMES ARCADE</h1>
   </div>
   <div class="section">
     <p>Strange videogames by local creatives</p>
   </div>
-
-  <div class="section spy" id="nextevent">
-    <h1>Secret HQ</h1>
-    <p>Thursday, 1st of May, 2014</p>
-    <p>6 PM – 9 PM</p>
+</div>
+<div class="back2">
+  <div class="section" id="nextevent">
+  <p>Current event:</p>
+    <h2>Games at the Library</h2>
+    <img class="framed smallimg" src="/img/newlynn\label5.png">
+    <img class="framed smallimg" src="/img/newlynn\label2.png">
+    <img class="framed smallimg" src="/img/newlynn\label1.png">
+    <img class="framed smallimg" src="/img/newlynn\label3.png">
+    <!--<img class="framed smallimg" src="/img/newlynn\label4.png">-->
+    
+    <p>July 1 – July 31st</p>
     <p>Free</p>
-    <p>Te Karanga Gallery,<br>208 Karangahape Road,<br>Auckland</p>
-    <img class="framed" src="callforgames2/avengers.jpg">
+    <p>New Lynn Library,<br>3 Memorial Drive,<br>Auckland</p>
   </div>
 
-
+</div>
+<!--<div class="back3">
   <div class="section">
     <p>
       <a class="navlist" href="#aboutus">About Us</a>
@@ -68,20 +40,23 @@ form {
       <a class="navlist" href="#pastevents">Past Events</a>
       </p>
   </div>
-
+</div>-->
+<div class="back3">
   <div id="aboutus" class="section">
     <h2>About Us</h2>
       <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
       <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
       <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
     <p>
-      We run a DIY games arcade, showing home-made games from around New Zealand.
+      We run a DIY games arcade, showing home-made games by people from around New Zealand.
     </p>
     <img class="framed" src="img/popup_colors.jpg">
     <p>
       Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
     </p>
   </div>
+</div>
+<div class="back4">
   <div id="stayintouch" class="section">
     <h2>Stay in Touch</h2>
 
@@ -107,24 +82,35 @@ form {
 
 <!--End mc_embed_signup-->
 
+  <p>Other ways to get in touch:</p>
+
     <p>
       <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
       <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
       <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
     </p>
   </div>
-
+</div>
+<div class="back5">
   <div id="pastevents" class="section">
     <h2>Past Events</h2>
+    <h3>2014</h3>
     <ul>
-      <li><a href="/events/2013-12-05/">First Thursdays Fiesta</a></li>
-      <li>Videogames appear at the Auckland Art Gallery</li>
-      <li><a href="/events/2013-11-02/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
+      <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
+      <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
+      <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
+    </ul>
+    <h3>2013</h3>
+    <ul>
+      <li><a href="/events/2013/first-thursdays-fiesta/">First Thursdays Fiesta</a></li>
+      <li><a href="/events/2013/auckland-art-gallery/">Big Day Art:Play! at the Auckland Art Gallery</a></li>
+      <li><a href="/events/2013/bread-and-butter-letter/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
+      <li><a href="/events/2013/gather/">Pop-Up Arcade test run at Gather</a></li>
     </ul>
 
     <p><a href="/games/">See all the games we've ever shown</a></p>
   </div>
-
+</div>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
