more whitespace, smaller H1

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <div class="back1">
   <div class="section">
   	<h1>THE POP-UP<br>GAMES ARCADE</h1>
-  </div>
-  <div class="section">
-    <p>Strange videogames by local creatives</p>
+    <p class="subheading">Strange videogames by local creatives</p>
   </div>
 </div>
 <div class="back2">
   <div class="section" id="nextevent">
-  <p>Current event:</p>
+  <p class="subheading">Now Playing</p>
     <h2>Games at the Library</h2>
     <img class="framed smallimg" src="/img/newlynn\label5.png">
     <img class="framed smallimg" src="/img/newlynn\label2.png">
@@ -44,9 +42,11 @@
 <div class="back3">
   <div id="aboutus" class="section">
     <h2>About Us</h2>
-      <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
-      <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
-      <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+      <div>
+        <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
+        <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
+        <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+      </div>
     <p>
       We run a DIY games arcade, showing home-made games by people from around New Zealand.
     </p>
