--- a/index.html
+++ b/index.html
@@ -9,56 +9,50 @@
 </head>
 <body>
 <div class="back1">
-  <div class="section">
-  	<h1>THE POP-UP<br>GAMES ARCADE</h1>
-    <p class="subheading">Strange videogames by local creatives</p>
-  </div>
+	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+  <p class="subheading">Strange videogames by local creatives</p>
 </div>
 <div class="back2">
-  <div class="section" id="nextevent">
   <p class="subheading">Now Playing</p>
-    <h2>Games at the Library</h2>
-    <img class="framed smallimg" src="/img/newlynn\label5.png">
-    <img class="framed smallimg" src="/img/newlynn\label2.png">
-    <img class="framed smallimg" src="/img/newlynn\label1.png">
-    <img class="framed smallimg" src="/img/newlynn\label3.png">
-    <!--<img class="framed smallimg" src="/img/newlynn\label4.png">-->
-    
-    <p>July 1 – July 31st</p>
-    <p>Free</p>
-    <p>New Lynn Library,<br>3 Memorial Drive,<br>Auckland</p>
+  <h2 id="nextevent">Games at the Library</h2>
+  <img class="framed" src="/img/robofortress_on_monster_500x.jpg">
+  <div class="caption">Robofortress |
+    Space Octopus Mono |
+    Worker & Parasite |
+    Narcoleptic Chicken Kid |
+    $13 Game
   </div>
+  <p>July 1 – July 31st</p>
+  <p>Free</p>
+  <p>New Lynn Library,<br>3 Memorial Drive,<br>Auckland</p>
 
+  <p><a href="/events/2014/new-lynn-library/">More about the New Lynn event</a></p>
 </div>
 <!--<div class="back3">
-  <div class="section">
-    <p>
-      <a class="navlist" href="#aboutus">About Us</a>
-      <a class="navlist" href="#stayintouch">Stay in touch</a>
-      <a class="navlist" href="#pastevents">Past Events</a>
-      </p>
-  </div>
+  <p>
+    <a class="navlist" href="#aboutus">About Us</a>
+    <a class="navlist" href="#stayintouch">Stay in touch</a>
+    <a class="navlist" href="#pastevents">Past Events</a>
+    </p>
 </div>-->
 <div class="back3">
-  <div id="aboutus" class="section">
-    <h2>About Us</h2>
-      <div>
-        <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
-        <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
-        <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
-      </div>
-    <p>
-      We run a DIY games arcade, showing home-made games by people from around New Zealand.
-    </p>
-    <img class="framed" src="img/popup_colors.jpg">
-    <p>
-      Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
-    </p>
-  </div>
+
+  <h2 id="aboutus">About Us</h2>
+    <div>
+      <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
+      <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
+      <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+    </div>
+  <p>
+    We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
+  </p>
+  <img class="framed" src="img/popup_colors.jpg">
+  <p>
+    Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
+  </p>
 </div>
 <div class="back4">
-  <div id="stayintouch" class="section">
-    <h2>Stay in Touch</h2>
+  <h2 id="stayintouch">Stay in Touch</h2>
 
 <!-- Begin MailChimp Signup Form -->
 <div class="mc_embed_signup">
@@ -82,34 +76,31 @@
 
 <!--End mc_embed_signup-->
 
-  <p>Other ways to get in touch:</p>
+<p>Other ways to get in touch:</p>
 
-    <p>
-      <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
-      <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
-      <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
-    </p>
-  </div>
+  <p>
+    <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
+    <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
+    <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
+  </p>
 </div>
 <div class="back5">
-  <div id="pastevents" class="section">
-    <h2>Past Events</h2>
-    <h3>2014</h3>
-    <ul>
-      <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
-      <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
-      <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
-    </ul>
-    <h3>2013</h3>
-    <ul>
-      <li><a href="/events/2013/first-thursdays-fiesta/">First Thursdays Fiesta</a></li>
-      <li><a href="/events/2013/auckland-art-gallery/">Big Day Art:Play! at the Auckland Art Gallery</a></li>
-      <li><a href="/events/2013/bread-and-butter-letter/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
-      <li><a href="/events/2013/gather/">Pop-Up Arcade test run at Gather</a></li>
-    </ul>
+  <h2 id="pastevents">Past Events</h2>
+  <h3>2014</h3>
+  <ul>
+    <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
+    <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
+    <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
+  </ul>
+  <h3>2013</h3>
+  <ul>
+    <li><a href="/events/2013/first-thursdays-fiesta/">First Thursdays Fiesta</a></li>
+    <li><a href="/events/2013/auckland-art-gallery/">Big Day Art:Play! at the Auckland Art Gallery</a></li>
+    <li><a href="/events/2013/bread-and-butter-letter/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
+    <li><a href="/events/2013/gather/">Pop-Up Arcade test run at Gather</a></li>
+  </ul>
 
-    <p><a href="/games/">See all the games we've ever shown</a></p>
-  </div>
+  <p><a href="/games/">See all the games we've ever shown</a></p>
 </div>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
