Add some details for the Art Week Event

--- a/art-week-stories/index.html
+++ b/art-week-stories/index.html
@@ -9,9 +9,30 @@
 </head>
 <body>
 	<div class="back1" style="border: 2px solid white; margin-top: 20px">
-		<h1>Art Week Stories</h1>
-		<p>Coming soon...</p>
+	
+		<p>The Pop-Up Games Arcade presents:</p>
+	
+		<h1>Choose Our Own Adventure: A story-making game</h1>
 		<img src="/img/popup_redecorating.jpg" class="framed">
+		
+		<p>PITT STREET METHODIST CHURCH</p>
+
+		<ul>
+		<li>Story Making 1: Wed 15th October, 7pm to 9pm</li>
+		<li>Story Making 2: Thurs 16th October, 7pm to 9pm</li>
+		<li>Story Arcade: Sat 18th October, 2pm to 4:30pm</li>
+		</ul>
+
+		<p>Come along on Wednesday or Thursday night to take part in a story-making game!
+		We'll work as a group to make an interactive story, 
+		where the reader can make choices to as they go.
+		You don't need to book or bring anything. Just turn up!</p>
+		
+		<p>Children are welcome but must be accompanied by an adult.</p>
+		
+		<p>Come on Saturday to play the finished stories in digital form, 
+		running on Pop-Up Arcade's hand-painted computers.</p>
+		
 		<p>Go <a href="/">back</a>.</p>
 	</div>
 </body>
