Update current events

--- a/art-week-stories/index.html
+++ b/art-week-stories/index.html
@@ -13,7 +13,7 @@
 		<p>The Pop-Up Games Arcade presents:</p>
 	
 		<h1>Choose Our Own Adventure: A story-making game</h1>
-		<img src="/img/popup_redecorating.jpg" class="framed">
+		<img src="/img/kate-bricks-story.jpg" class="framed">
 		
 		<p>PITT STREET METHODIST CHURCH</p>
 
