--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <p class="subheading">Strange videogames by local creatives</p>
 </div>
 <div class="back2">
-  <p class="subheading">Now Playing</p>
-  <h2 id="nextevent">Games at the Library</h2>
+  <p class="subheading">Coming Soon</p>
+  <h2 id="nextevent">Games at the Library #2</h2>
   <img class="framed" src="/img/robofortress_on_monster_500x.jpg">
   <div class="caption">Robofortress |
     Space Octopus Mono |
@@ -22,11 +22,27 @@
     Narcoleptic Chicken Kid |
     $13 Game
   </div>
-  <p>July 1 – July 31st</p>
-  <p>Free</p>
-  <p>New Lynn Library,<br>3 Memorial Drive,<br>Auckland</p>
+  <p>September 1 – September 30th</p>
+  <p>Birkenhead Library,<br>Corner Rawene Road & Hinemoa St,<br>Birkenhead</p>
 
-  <p><a href="/events/2014/new-lynn-library/">More about the New Lynn event</a></p>
+  <p><a href="/events/2014/birkenhead-library/">More about the Birkenhead event</a></p>
+
+  <br><br><!--spacing hacks-->
+
+ <h2 id="nextevent">Choose Our Own Adventure</h2>
+  <img class="framed" src="/img/kate-bricks-story.jpg">
+  <div class="caption">A story-making game</div>
+
+    <p>PITT STREET METHODIST CHURCH</p>
+
+    <ul>
+    <li>Story Making 1: Wed 15th October, 7pm to 9pm</li>
+    <li>Story Making 2: Thurs 16th October, 7pm to 9pm</li>
+    <li>Story Arcade: Sat 18th October, 2pm to 4:30pm</li>
+    </ul>
+
+  <p><a href="/art-week-stories/">More about Choose Our Own Adventure</a></p>
+
 </div>
 <!--<div class="back3">
   <p>
