edit Artweek page, add Artweek logo, make a copy at a better URL

--- a/artweek-stories/index.html
+++ b/artweek-stories/index.html
@@ -30,7 +30,7 @@
 		
 		<p>Come on Saturday to play the finished stories in digital form, running on Pop-Up Arcade's hand-painted computers.</p>
 
-		<img alt="This event is part of ArtWeek Auckland." src="artweek2014.jpg" width="300px">
+		<img alt="This event is part of Artweek Auckland." src="artweek2014.jpg" width="300px">
 
 		<p>Go <a href="/">back</a>.</p>
 	</div>
