--- a/index.html
+++ b/index.html
@@ -14,21 +14,6 @@
 </div>
 <div class="back2">
   <p class="subheading">Coming Soon</p>
-  <h2 id="nextevent">Games at the Library #2</h2>
-  <img class="framed" src="/img/robofortress_on_monster_500x.jpg">
-  <div class="caption">Robofortress |
-    Space Octopus Mono |
-    Worker & Parasite |
-    Narcoleptic Chicken Kid |
-    $13 Game
-  </div>
-  <p>September 1 – September 30th</p>
-  <p>Birkenhead Library,<br>Corner Rawene Road & Hinemoa St,<br>Birkenhead</p>
-
-  <p><a href="/events/2014/birkenhead-library/">More about the Birkenhead event</a></p>
-
-  <br><br><!--spacing hacks-->
-
  <h2 id="nextevent">Choose Our Own Adventure</h2>
   <img class="framed" src="/img/kate-bricks-story.jpg">
   <div class="caption">A story-making game</div>
@@ -41,7 +26,7 @@
     <li>Story Arcade: Sat 18th October, 2pm to 4:30pm</li>
     </ul>
 
-  <p><a href="/art-week-stories/">More about Choose Our Own Adventure</a></p>
+  <p><a href="/artweek-stories/">More about Choose Our Own Adventure</a></p>
 
 </div>
 <!--<div class="back3">
@@ -104,6 +89,8 @@
   <h2 id="pastevents">Past Events</h2>
   <h3>2014</h3>
   <ul>
+    <li><a href="/events/2014/young-and-hungry/">Young &amp; Hungry</a></li>
+    <li><a href="/events/2014/birkenhead-library/">Birkenhead Library</a></li>
     <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
     <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
     <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
