Add the CooA stories and update the event page

--- a/art-week-stories/index.html
+++ b/art-week-stories/index.html
@@ -10,28 +10,7 @@
 <body>
 	<div class="back5" style="border: 2px solid white; margin-top: 20px">
 	
-		<p>The Pop-Up Games Arcade presents:</p>
-	
-		<h1>Choose Our Own Adventure: A story-making game</h1>
-		<img src="/img/kate-bricks-story.jpg" class="framed">
-		
-		<p>PITT STREET METHODIST CHURCH</p>
+	<p>This page has moved, please click through to <a href="/events/2014/artweek-stories/">Choose our own Adventure</a></p>
 
-		<ul>
-		<li>Story Making 1: Wed 15th October, 7pm to 9pm</li>
-		<li>Story Making 2: Thurs 16th October, 7pm to 9pm</li>
-		<li>Story Arcade: Sat 18th October, 2pm to 4:30pm</li>
-		</ul>
-
-		<p>Come along on Wednesday or Thursday night to take part in a story-making game!</p>
-
-		<p>We'll work as a group to create a story.
-		You don't need to book, just turn up.</p>
-		
-		<p>Come on Saturday to play the finished stories in digital form, running on Pop-Up Arcade's hand-painted computers.</p>
-
-		<img alt="This event is part of ArtWeek Auckland." src="artweek2014.jpg" width="300px">
-
-		<p>Go <a href="/">back</a>.</p>
 	</div>
 </body>
