--- a/index.html
+++ b/index.html
@@ -14,28 +14,11 @@
 </div>
 <div class="back2">
   <p class="subheading">Coming Soon</p>
- <h2 id="nextevent">Choose Our Own Adventure</h2>
-  <img class="framed" src="/img/kate-bricks-story.jpg">
-  <div class="caption">A story-making game</div>
 
-    <p>PITT STREET METHODIST CHURCH</p>
-
-    <ul>
-    <li>Story Making 1: Wed 15th October, 7pm to 9pm</li>
-    <li>Story Making 2: Thurs 16th October, 7pm to 9pm</li>
-    <li>Story Arcade: Sat 18th October, 2pm to 4:30pm</li>
-    </ul>
-
-  <p><a href="/artweek-stories/">More about Choose Our Own Adventure</a></p>
+  <img class="framed" src="/img/popup_redecorating.jpg">
+    <p>No events confirmed at the moment. Stay tuned…</p>
 
 </div>
-<!--<div class="back3">
-  <p>
-    <a class="navlist" href="#aboutus">About Us</a>
-    <a class="navlist" href="#stayintouch">Stay in touch</a>
-    <a class="navlist" href="#pastevents">Past Events</a>
-    </p>
-</div>-->
 <div class="back3">
 
   <h2 id="aboutus">About Us</h2>
@@ -89,6 +72,7 @@
   <h2 id="pastevents">Past Events</h2>
   <h3>2014</h3>
   <ul>
+    <li><a href="/events/2014/artweek-stories/">Choose Our Own Adventure</a></li>
     <li><a href="/events/2014/young-and-hungry/">Young &amp; Hungry</a></li>
     <li><a href="/events/2014/birkenhead-library/">Birkenhead Library</a></li>
     <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
